--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,19 @@
 		<script src="js/codemirror/mode/javascript.js"></script>
 		<script src="js/codemirror/mode/css.js"></script>
 		<script src="js/codemirror/mode/htmlmixed.js"></script>
-		<script src="js/rawinflate.js"></script>
-		<script src="js/rawdeflate.js"></script>
-		<script src="js/esprima.js"></script>
+		<script src="js/lib/rawinflate.js"></script>
+		<script src="js/lib/rawdeflate.js"></script>
+		<script src="js/lib/esprima.js"></script>
 	</head>
 	<body>
 		<div id="preview"></div>
 		<div id="editor"></div>
 		<div id="toolbar"></div>
 		<div id="popup"></div>
+<script type="text/template" id="example">
+aaa
+vbb
+</script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
