--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html manifest="editor.appcache">
-	<head>
-		<title>eisenscript editor</title>
-		<link rel="stylesheet" href="js/codemirror/codemirror.css">
-		<link rel="stylesheet" href="css/styles.css">
-		<script src="js/codemirror/codemirror.js"></script>
-		<script src="js/codemirror/mode/xml.js"></script>
-		<script src="js/codemirror/mode/javascript.js"></script>
-		<script src="js/codemirror/mode/css.js"></script>
-		<script src="js/codemirror/mode/htmlmixed.js"></script>
-		<script src="js/lib/rawinflate.js"></script>
-		<script src="js/lib/rawdeflate.js"></script>
-		<script src="js/lib/esprima.js"></script>
-	</head>
-	<body>
-		<div id="preview"></div>
-		<div id="editor"></div>
-		<div id="toolbar"></div>
-		<div id="popup"></div>
-<script type="text/template" id="example">
-aaa
-vbb
-</script>
-		<script src="js/main.js"></script>
-	</body>
+<head>
+<title>eisenscript editor</title>
+<link rel="stylesheet" href="js/codemirror/codemirror.css">
+<link rel="stylesheet" href="css/styles.css">
+<script src="js/codemirror/codemirror.js"></script>
+<script src="js/codemirror/mode/xml.js"></script>
+<script src="js/codemirror/mode/javascript.js"></script>
+<script src="js/codemirror/mode/css.js"></script>
+<script src="js/codemirror/mode/htmlmixed.js"></script>
+<script src="js/lib/rawinflate.js"></script>
+<script src="js/lib/rawdeflate.js"></script>
+<script src="js/lib/esprima.js"></script>
+<style>
+#editor .CodeMirror {
+	opacity: .5;
+}
+</style>
+</head>
+<body>
+<div id="preview"></div>
+<div id="editor"></div>
+<div id="toolbar"></div>
+<div id="popup"></div>
+<script src="js/main.js"></script>
+</body>
 </html>
