--- a/app/render.html
+++ b/app/render.html
@@ -6,16 +6,40 @@
 </head>
 <body>
 <script type="text/eisenscript" id="eisenscript">
-box
+set maxobjects 16000
+
+{ s .8 a 0.3 sat 0.5 } grinder
+set background #fff
+
+rule grinder {
+  36 * { rz 10 y 0.1 } 36 * { ry 10 z 1.2 b 0.99 h 12 } xbox
+}
+
+rule xbox {
+  { s 1.1 } grid
+  { b 0.7 color #eee a 0.2 } box
+}
+
+rule xbox {
+  { s 1.1 } grid
+  { b 0.7 color #fff a 0.3 } box
+}
 </script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 <script src="js/eisen/three.min.js"></script>
 <script src="js/eisen/color.js"></script>
 <script src="js/eisen/mt.js"></script>
+<script src="js/lib/rawinflate.js"></script>
+<script src="js/lib/rawdeflate.js"></script>
 <script src="js/eisen/eisenscript.js"></script>
 <script type="text/javascript">
 $(function() {
+  function encode( string ) {
 
+    return window.btoa( RawDeflate.deflate( string ) );
+
+  }
+  console.log(encode($('#eisenscript').text()));
   var container, renderer, objects, n = 0;
 
   // compiling...
