--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <script src="js/lib/rawdeflate.js"></script>
 <script src="js/lib/esprima.js"></script>
 <style>
+body {
+	background: #202020;
+}
 #editor .CodeMirror {
 	opacity: .5;
 }
