Added feature to turn off animation

--- a/resource/render.html
+++ b/resource/render.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta id="doAnimate" data="1">
 <link rel="stylesheet" href="css/render/main.css">
 </head>
 <body>
