--- a/resource/render.html
+++ b/resource/render.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta id="doAnimate" data="1">
+<meta id="doOptimize" data="1">
 <link rel="stylesheet" href="css/render/main.css">
 </head>
 <body>
