--- a/resource/render.html
+++ b/resource/render.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta id="doAnimate" data="1">
 <meta id="doOptimize" data="1">
+<meta id="docsite" data="0">
 <link rel="stylesheet" href="css/render/main.css">
 </head>
 <body>
