Add feature to toggle wireframe in optimized situation

--- a/resource/render.html
+++ b/resource/render.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta id="doOptimize" data="1">
 <meta id="docsite" data="0">
+<meta id="wireframe" data="0">
 <link rel="stylesheet" href="css/render/main.css">
 </head>
 <body>
